# makos

./: .gitignore  Install MAKOS.command  README.md  makos  pyproject.toml  setup.py
agent-skills/makos-context-os/: SKILL.md
bridge/: makos.py
bridge/makos_bridge/: __init__.py  cli.py  constants.py  history.py  indexer.py  metadata.py  obsidian_cli.py  procedures.py  reviews.py  runtime.py  skills.py  utils.py  vault.py  yaml_compat.py
docs/: architecture.md  bridge-cli.md  claude-skill.md  install.md  limitations.md  roadmap-v2.md  usage.md
docs/examples/: 01-procedure-discovery.md  02-inbox-to-knowledge.md  03-human-review.md  04-multi-agent-shared-context.md  05-claude-skill-install.md
schemas/: frontmatter.schema.json  required-fields-by-type.yaml
scripts/: bootstrap-vault.sh  demo-e2e.sh
tests/: conftest.py  test_agent_ready.py  test_append_history.py  test_metadata_validation.py  test_run_procedure.py  test_safe_creation.py  test_search_before_create.py  test_skills_registry.py  test_vault_paths.py
vault-template/00-system/: agent-system-prompt.md  confidence-scale.md  conventions.md  glossary.md  metadata-standard.md  retrieval-policy.md  system-overview.md  write-policy.md
vault-template/01-inbox/: README.md
vault-template/02-procedures/: README.md  analizar-documento-extraer-puntos-clave.md  preparar-prompt-operativo-reutilizable.md  redactar-informe-recurrente.md
vault-template/03-skills/: README.md
vault-template/08-indexes/: knowledge-index.md  procedures-index.md  skills-index.md  tags-index.md
vault-template/09-templates/: skill.md  (+5 more)
(+33 files in other folders)
